--- a/ca/templates/ca/ca.html
+++ b/ca/templates/ca/ca.html
@@ -31,8 +31,8 @@
 				
 				<!-- Slider Item -->
 				<div class="owl-item">
-					<div class="slider_background" style="background-image:url({% static 'ca/img/home_slider_1.jpg' %})"></div>
-					<div class="home_slider_content text-center">
+					<div class="slider_background" style="background-image:url({% static 'ca/img/home_slider.png' %});background-repeat:no-repeat;"></div>
+					<div class="home_slider_content text-center" >
 						<h1>College Ambassador</h1>
 						<div class="home_slider_text">Donec vel ante rhoncus, posuere nulla quis, interdum nisi. Vestibulum laoreet lacinia diam, eget blandit sem gravida at.</div>
 						<div class="link_button home_slider_button"><a href="{% url 'ca:user-add' %}">Register</a></div>
@@ -46,10 +46,10 @@
 				
 		<!-- Header -->
 
-		<header class="header">
+		<header class="header" >
 
 			<!-- Top Bar -->
-			<div class="top_bar">
+			<div class="top_bar" style="background-color: black" >
 				<div class="container">
 					<div class="row">
 						<div class="col">
@@ -57,9 +57,9 @@
 								<div class="logo_container">
 									<div class="logo">
 										<a href="{% url 'ca:index' %}">
-											<div class="logo_line_1"><span>AD</span>vitiya</div>
-											<div class="logo_line_2">Techfest</div>
-											<div class="logo_img"><img src="{% static 'ca/img/logo.png'  %}" alt=""></div>
+											<!-- <div class="logo_line_1"><span>AD</span>vitiya</div>
+											<div class="logo_line_2">Techfest</div> -->
+											<div class="logo_img"><img src="{% static 'ca/img/logo.png'  %}" height="30px" alt=""></div>
 										</a>
 									</div>
 								</div>
@@ -171,11 +171,16 @@
 				<div class="col-lg-6">
 					<div class="intro_content">
 						<div class="intro_title_container">
-							<div class="intro_subtitle">About us</div>
-							<h1 class="intro_title">IIT Ropar</h1>
+							<div class="intro_subtitle">Who We Are</div>
+							<h1 class="intro_title">About Advitiya</h1>
 						</div>
 						<div class="intro_text">
-							<p>Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit.Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobo rtis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit.</p>
+							<p>
+								IIT Ropar is organizing the fourth edition of it's annual Technical Festival “Advitiya” in the first week of of February consisting of 72 hours of intense competitions and technical events
+								Advitiya has already evolved into a brand within four years of its inception and a publicity paradise that ensures stupendous brand visibility for sponsors
+								With an array of events that consolidate the vision for times to come, Advitiya 20’ is ready to set the scientific spirits soaring and technological temper ablaze
+								Advitiya will witness a wide range of scientific and technical activities and novel events from fields like Coding, Robotics, Finance, Design and Entrepreneurship with total prizes worth as high as 8 lakh Rupees
+							</p>
 						</div>
 						<!-- <div class="link_button intro_button"><a href="#">read more</a></div> -->
 					</div>
@@ -186,12 +191,12 @@
 
 	<!-- Services -->
 
-	<div class="services">
-		<div class="container">
+	<div class="services"style="background-image:url('/static/ca/img/abcd.png'); "">
+		<div class="container" >
 			<div class="row">
 				<div class="col">
 					<!-- Testimonials Slider -->
-					<h1 style="color: black"><strong>Why Cr?</strong></h1>
+					<h1 style="color:white"><strong>WHY CA?</strong></h1>
 					<div class="services_slider_container">
 						<div class="owl-carousel owl-theme services_slider">
 
@@ -199,9 +204,9 @@
 							<div class="owl-item">
 								<div class="services_item d-flex flex-column align-items-center justify-content-center">
 									<div class="services_item_bg"></div>
-									<div class="services_icon"><img class="svg" src="{% static 'ca/img/services_1.png'  %}" alt=""></div>
-									<div class="services_title">Exchange Fiat for Crypto</div>
-									<p class="services_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
+									<!-- <div class="services_icon"></div> -->
+									<div class="services_title"><strong>Improve Your Skill Set</strong> </div>
+									<p class="services_text">Enhance your Communication and Managerial Skills</p>
 									<!-- <div class="services_link"><a href="#">Read More</a></div> -->
 								</div>
 							</div>
@@ -210,9 +215,9 @@
 							<div class="owl-item">
 								<div class="services_item d-flex flex-column align-items-center justify-content-center">
 									<div class="services_item_bg"></div>
-									<div class="services_icon"><img class="svg" src="{% static 'ca/img/services_1.svg'  %}" alt=""></div>
-									<div class="services_title">Exchange Fiat for Crypto</div>
-									<p class="services_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
+									<!-- <div class="services_icon"></div> -->
+									<div class="services_title"><strong> Your Network</strong></div>
+									<p class="services_text">Interact with people coming from diverse fields across the country and develop your network</p>
 									<!-- <div class="services_link"><a href="#">Read More</a></div> -->
 								</div>
 							</div>
@@ -221,9 +226,28 @@
 							<div class="owl-item">
 								<div class="services_item d-flex flex-column align-items-center justify-content-center">
 									<div class="services_item_bg"></div>
-									<div class="services_icon"><img class="svg" src="{% static 'ca/img/services_2.svg'  %}" alt=""></div>
-									<div class="services_title">Exchange Fiat for Crypto</div>
-									<p class="services_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
+									<!-- <div class="services_icon"></div> -->
+									<div class="services_title"><strong>Certificates</strong></div>
+									<p class="services_text">All CA's will be given Certificates by Advitiya IIT Ropar recogonizing them for their work</p>
+									<!-- <div class="services_link"><a href="#">Read More</a></div> -->
+								</div>
+							</div>
+
+							<div class="owl-item">
+								<div class="services_item d-flex flex-column align-items-center justify-content-center">
+									<div class="services_item_bg"></div>
+									<!-- <div class="services_icon"></div> -->
+									<div class="services_title"><strong>Make New Friends</strong></div>
+									<p class="services_text">Get in touch with people from other colleges</p>
+									<!-- <div class="services_link"><a href="#">Read More</a></div> -->
+								</div>
+							</div>
+							<div class="owl-item">
+								<div class="services_item d-flex flex-column align-items-center justify-content-center">
+									<div class="services_item_bg"></div>
+									<!-- <div class="services_icon"></div> -->
+									<div class="services_title"><strong>Free Accomodation</strong></div>
+									<p class="services_text">Top CA's will be provided with free accomodation during Advitiya-19</p>
 									<!-- <div class="services_link"><a href="#">Read More</a></div> -->
 								</div>
 							</div>
@@ -232,10 +256,10 @@
 							<div class="owl-item">
 								<div class="services_item d-flex flex-column align-items-center justify-content-center">
 									<div class="services_item_bg"></div>
-									<div class="services_icon"><img class="svg" src="{% static 'ca/img/serrvices_3.svg'  %}" alt=""></div>
-									<div class="services_title">Exchange Fiat for Crypto</div>
-									<p class="services_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
-									<div class="services_link"><a href="#">Read More</a></div>
+									<!-- <div class="services_icon"></div> -->
+									<div class="services_title"><strong>Lead your College</strong></div>
+									<p class="services_text">An opportunity to represent your College on a high platform</p>
+									<!-- <div class="services_link"><a href="#">Read More</a></div> -->
 								</div>
 							</div>
 
@@ -250,7 +274,7 @@
 	<!-- Converter -->
 
 	<div class="converter">
-		<div class="converter_background parallax-window" data-parallax="scroll" data-image-src="{% static 'ca/img/converter.jpg'  %}" data-speed="0.8"></div>
+		<div class="converter_background parallax-window" data-parallax="scroll" data-image-src="{% static 'ca/img/converter.png'  %}" data-speed="0.8"></div>
 
 		<div class="container">
 			<div class="row">
@@ -258,10 +282,10 @@
 					<div class="converter_content">
 						<div class="converter_title_container">
 							<div class="converter_subtitle">take a look at our</div>
-							<h1 class="converter_title">Advitiya</h1>
+							<h1 class="converter_title"><strong>ADVITIYA'20 </strong></h1>
 						</div>
 						<div class="converter_text">
-							<p>Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit.Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobo rtis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit.</p>
+							<p style="font-size: 16px;">The annual technical festival of IIT ropar “Adivtiya ”, marks a 3 day journey consisting of various competitions spread across Robotics, Management, Coding, Designing, Gaming, Astronomy, Aero-modelling and Quizzing. Apart from the competitions, talks and workshops are few of the interesting events of the fest. The upcoming Advitiya is going to be held in February 2020.</p>
 						</div>
 					</div>
 				</div>
@@ -277,8 +301,8 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container text-center">
-						<div class="section_subtitle">take a look at our</div>
-						<div class="section_title">A simple trading system</div>
+						<div class="section_subtitle">Responsibilities</div>
+						<div class="section_title">What we expect of you...</div>
 					</div>
 				</div>
 			</div>
@@ -288,9 +312,9 @@
 				<div class="col-lg-4 info_col">
 					<div class="info_item text-center">
 						<div class="info_image"><img src="{% static 'ca/img/info_1.png'  %}" alt=""></div>
-						<div class="info_title">Create your wallet</div>
+						<div class="info_title">Word of Mouth</div>
 						<div class="info_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris.</p>
+							<p>Spread awareness about Advitiya-19 via word of mouth and ensure more and more people get to know about it</p>
 						</div>
 					</div>
 				</div>
@@ -299,9 +323,9 @@
 				<div class="col-lg-4 info_col">
 					<div class="info_item text-center">
 						<div class="info_image"><img src="{% static 'ca/img/info_2.png'  %}" alt=""></div>
-						<div class="info_title">Make payments</div>
+						<div class="info_title">Publicity</div>
 						<div class="info_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris.</p>
+							<p>Display posters of Advitiya-19 on receiving them on college bulletin and notice boards</p>
 						</div>
 					</div>
 				</div>
@@ -310,9 +334,9 @@
 				<div class="col-lg-4 info_col">
 					<div class="info_item text-center">
 						<div class="info_image"><img src="{% static 'ca/img/info_3.png'  %}" alt=""></div>
-						<div class="info_title">Buy or sell orders</div>
+						<div class="info_title">Organize Events</div>
 						<div class="info_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris.</p>
+							<p>Organize workshops & events in your college or city under the guidance of Advitiya, IIT Ropar</p>
 						</div>
 					</div>
 				</div>
@@ -324,7 +348,7 @@
 	
 	<!-- Footer -->
 
-	<footer class="footer">
+	<footer class="footer" style="background-color: black" >
 		<div class="container">
 			<div class="row">
 
@@ -333,9 +357,9 @@
 					<div class="footer_about">
 						<div class="logo_container footer_logo">
 							<div class="logo">
-								<a href="#">
-									<div class="logo_line_1"><span>AD</span>vitiya</div>
-									<div class="logo_line_2">Techfest</div>
+								<a href="{% url 'ca:index' %}">
+									<!-- <div class="logo_line_1"><span>AD</span>vitiya</div>
+									<div class="logo_line_2">Techfest</div> -->
 									<div class="logo_img"><img src="{% static 'ca/img/logo.png'  %}" alt=""></div>
 								</a>
 							</div>
@@ -351,9 +375,8 @@
 						<ul>
 							<li><a href="#">Home</a></li>
 							<li><a href="#">About</a></li>
-							<li><a href="#">Case Studies</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Consulting</a></li>
+							<li><a href="#">Events</a></li>
+							<li><a href="#">Hospitality</a></li>
 						</ul>
 					</div>
 				</div>
@@ -372,10 +395,9 @@
               <p class="mb-0"><a href="#">General Secretary:: gs.tech@iitrpr.ac.in</a></p>
 						<div class="footer_social">
 							<ul>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.facebook.com/advitiya.iitrpr/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.instagram.com/advitiya_iitrpr/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+								<li><a href="https://twitter.com/advitiyaiitrpr?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -390,8 +412,7 @@
 					<div class="col-md-4 order-md-1 order-2">
 						<div class="copyright_content d-flex flex-row align-items-center justify-content-start">
 							 <div class="cr"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </div>--> 
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Technical team @IIT Ropar</a>
 						</div>
 						</div>
 					</div>
