--- a/ca/templates/ca/ca.html
+++ b/ca/templates/ca/ca.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,10 +33,10 @@
 				<!-- Slider Item -->
 				<div class="owl-item">
 					<div class="slider_background" style="background-image:url({% static 'ca/img/home_slider.png' %});background-repeat:no-repeat;"></div>
-					<div class="home_slider_content text-center" >
-						<h1>College Ambassador</h1>
+					<div class="home_slider_content text-center" style="opacity: 0.7" >
+						<h1><br>College Ambassador</h1>
 						<div class="home_slider_text">Donec vel ante rhoncus, posuere nulla quis, interdum nisi. Vestibulum laoreet lacinia diam, eget blandit sem gravida at.</div>
-						<div class="link_button home_slider_button"><a href="{% url 'ca:user-add' %}">Register</a></div>
+						<div class="link_button home_slider_button"><a href="{% provider_login_url 'google' %}">Register</a></div>
 					</div>
 				</div>
 			</div>
@@ -59,7 +60,7 @@
 										<a href="{% url 'ca:index' %}">
 											<!-- <div class="logo_line_1"><span>AD</span>vitiya</div>
 											<div class="logo_line_2">Techfest</div> -->
-											<div class="logo_img"><img src="{% static 'ca/img/logo.png'  %}" height="30px" alt=""></div>
+											<div class="logo_line_1"><img src="{% static 'ca/img/logo.png'  %}" height="50px" alt=""></div>
 										</a>
 									</div>
 								</div>
@@ -72,8 +73,11 @@
 										</ul>
 									</div> -->
 									<div class="register_login">
-										<div class="register"><a href="{% url 'ca:user-add' %}">register</a></div>
-										<div class="login"><a href="{% url 'ca:user_login' %}">login</a></div>
+										{% if not user.is_authenticated %}
+											<div class="login"><a href="{% provider_login_url 'google' %}">SIGNIN WITH GOOGLE</a></div>
+										{% else %}
+											<div class="login"><a href="{% url 'account_logout' %}">SIGNOUT</a></div>
+										{% endif %}
 									</div>
 								</div>
 								<div class="burger">
@@ -84,79 +88,7 @@
 					</div>
 				</div>		
 			</div>
-			<!-- Menu -->
-
-			<div class="menu">
-				<div class="menu_register_login">
-					<div class="container">
-						<div class="row">
-							<div class="col">
-								<div class="menu_register_login_content d-flex flex-row align-items-center justify-content-end">
-									<div class="register"><a href="#">register</a></div>
-									<div class="login"><a href="#">login</a></div>
-								</div>
-							</div>
-						</div>
-					</div>
-						
-				</div>
-				<ul class="menu_list">
-					<li class="menu_item">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<a href="#">home</a>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="menu_item">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<a href="about.html">about us</a>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="menu_item">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<a href="listings.html">services</a>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="menu_item">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<a href="news.html">portfolio</a>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="menu_item">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<a href="contact.html">blog</a>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="menu_item">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<a href="contact.html">contact</a>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
+			
 		</header>
 	</div>
 	
@@ -360,7 +292,7 @@
 								<a href="{% url 'ca:index' %}">
 									<!-- <div class="logo_line_1"><span>AD</span>vitiya</div>
 									<div class="logo_line_2">Techfest</div> -->
-									<div class="logo_img"><img src="{% static 'ca/img/logo.png'  %}" alt=""></div>
+									<div class="logo_line_1"><img src="{% static 'ca/img/logo.png'  %}"height="60px"; alt=""></div>
 								</a>
 							</div>
 						</div>
