--- a/ca/templates/ca/ca.html
+++ b/ca/templates/ca/ca.html
@@ -32,7 +32,7 @@
 				
 				<!-- Slider Item -->
 				<div class="owl-item">
-					<div class="slider_background" style="background-image:url({% static 'ca/img/home_slider.png' %});background-repeat:no-repeat;"></div>
+					<div class="slider_background" style="background-image:url({% static 'ca/img/home_slider.jpg' %});background-repeat:no-repeat;"></div>
 					<div class="home_slider_content text-center" style="opacity: 0.7" >
 						<h1><br>College Ambassador</h1>
 						<div class="home_slider_text">Donec vel ante rhoncus, posuere nulla quis, interdum nisi. Vestibulum laoreet lacinia diam, eget blandit sem gravida at.</div>
