--- a/ca/templates/ca/profilepage.html
+++ b/ca/templates/ca/profilepage.html
@@ -18,7 +18,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="profile-img">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZFJeOkLjx9uDlbMHQ_6cJT0CrpytrSOYsCgJ-xIZXRIh945jM2QWJJUoUg" alt=""/>
                             
                         </div>
                     </div>
@@ -61,10 +61,7 @@
                     <div class="col-md-7">
                         <div class="tab-content profile-tab" id="myTabContent">
                             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                                        <p>Rule1:  eaque, asperiores labore earum in debitis omnis impedit sint et, quidem perspiciatis dolores temporibus, quia explicabo. Eveniet cumque nam quibusdam?</p>
-                                        <p>Rule1:  eaque, asperiores labore earum in debitis omnis impedit sint et, quidem perspiciatis dolores temporibus, quia explicabo. Eveniet cumque nam quibusdam?</p>
-                                        <p>Rule1:  eaque, asperiores labore earum in debitis omnis impedit sint et, quidem perspiciatis dolores temporibus, quia explicabo. Eveniet cumque nam quibusdam?</p>
-                                        <p>Rule1:  eaque, asperiores labore earum in debitis omnis impedit sint et, quidem perspiciatis dolores temporibus, quia explicabo. Eveniet cumque nam quibusdam?</p>
+                                        <p>This Section will be revealed soon.</p>
                             </div>
                             </div>
                         </div>
