--- a/ca/static/ca/css/style.css
+++ b/ca/static/ca/css/style.css
@@ -29,7 +29,7 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-   background-image:url('/static/ca/img/img.gif');
+   background-image:url('/static/ca/img/img_min.gif');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
