--- a/ca/templates/ca/ca.html
+++ b/ca/templates/ca/ca.html
@@ -34,8 +34,8 @@
 				<div class="owl-item">
 					<div class="slider_background" style="background-image:url({% static 'ca/img/home_slider.jpg' %});background-repeat:no-repeat;"></div>
 					<div class="home_slider_content text-center" style="opacity: 0.7" >
-						<h1><br>College Ambassador</h1>
-						<div class="home_slider_text">Donec vel ante rhoncus, posuere nulla quis, interdum nisi. Vestibulum laoreet lacinia diam, eget blandit sem gravida at.</div>
+						<h1><br>Campus Ambassador</h1>
+						<div class="home_slider_text">Register to boost your resume and win exciting goodies by being the campus ambassador of Advitiya in your college.</div>
 						<div class="link_button home_slider_button"><a href="{% provider_login_url 'google' %}">Register</a></div>
 					</div>
 				</div>
@@ -213,11 +213,21 @@
 				<div class="col-lg-5">
 					<div class="converter_content">
 						<div class="converter_title_container">
-							<div class="converter_subtitle">take a look at our</div>
-							<h1 class="converter_title"><strong>ADVITIYA'20 </strong></h1>
+							<div class="converter_subtitle">take a look at the</div>
+							<h1 class="converter_title"><strong>INCENTIVES </strong></h1>
 						</div>
 						<div class="converter_text">
-							<p style="font-size: 16px;">The annual technical festival of IIT ropar “Adivtiya ”, marks a 3 day journey consisting of various competitions spread across Robotics, Management, Coding, Designing, Gaming, Astronomy, Aero-modelling and Quizzing. Apart from the competitions, talks and workshops are few of the interesting events of the fest. The upcoming Advitiya is going to be held in February 2020.</p>
+							<ol>
+							<li><p style="font-size: 19px;">Top 50 CAs will get pro-night passes for free.<br></li>
+
+								<li><p style="font-size: 19px;">Top 10 CAs will get a certificate of excellence each, with their ranks mentioned in it, and goodies worth ₹ 15,000/- for free.<br></p></li>
+								
+									<li><p style="font-size: 19px;">CAs who bring more than 50 participants will get goodies and t-shirts of Advitiya 2020 for free.<br></p></li>
+								
+										<li><p style="font-size: 19px;">CAs will get cash prizes based on the number of participants referred by them.<br></p></li>
+								
+											<li><p style="font-size: 19px;">All CAs will get certificate of participation.</p></li>
+								</ol>
 						</div>
 					</div>
 				</div>
@@ -296,7 +306,7 @@
 								</a>
 							</div>
 						</div>
-						<p class="footer_about_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec.</p>
+						<p class="footer_about_text">The annual technical festival of IIT ropar “Adivtiya ”, marks a 3 day journey consisting of various competitions spread across Robotics, Management, Coding, Designing, Gaming, Astronomy, Aero-modelling and Quizzing. Apart from the competitions, talks and workshops are few of the interesting events of the fest. The upcoming Advitiya is going to be held in February 2020.</p>
 					</div>
 				</div>
 
