--- a/ca/templates/ca/index.html
+++ b/ca/templates/ca/index.html
@@ -6,7 +6,6 @@
   <div class="cover-container d-flex h-100 p-1 flex-column">
     <header class="masthead">
       <div class="inner">
-        <br><br>
         <div class="logo_img"><img src="{% static 'ca/img/logo1.png'  %}" alt="" height="95px;"></div>
       </div>
     </header>
@@ -20,7 +19,7 @@
             <h2>Hold onto your horses.</h2>
             <p class="lead">Campus Ambassador portal is live now.<br>Register here.</p>
             <p class="lead">
-              <h2><strong><br>CAMPUS AMBASSADOR</strong></h2>
+              <h2><strong><br>CAMPUS AMBASSADOR</strong></h2><br>
               <a href="{% url 'ca:college_ambassador' %}" class="btn btn-lg btn-secondary">Learn more</a>
             </p>
           </main>
