--- a/ca/templates/ca/ca.html
+++ b/ca/templates/ca/ca.html
@@ -34,7 +34,7 @@
 				<div class="owl-item">
 					<div class="slider_background" style="background-image:url({% static 'ca/img/home_slider.jpg' %});background-repeat:no-repeat;"></div>
 					<div class="home_slider_content text-center" style="opacity: 0.7" >
-						<h1 {% widthratio this_value max_value 100 %}><br>Campus Ambassador</h1>
+						<h1><br>Campus Ambassador</h1>
 						<div class="home_slider_text">Register to boost your resume and win exciting goodies by being the campus ambassador of Advitiya in your college.</div>
 						<div class="link_button home_slider_button"><a href="{% provider_login_url 'google' %}">Register</a></div>
 					</div>
@@ -98,7 +98,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
-					<div class="intro_image text-lg-right text-center"><img src="{% static 'ca/img/intro.png'  %}" alt=""></div>
+					<div class="intro_image text-lg-right text-center"><img src="{% static 'ca/img/advitiya.jpg'  %}" height="350px" alt=""></div>
 				</div>
 				<div class="col-lg-6">
 					<div class="intro_content">
