--- a/ca/templates/ca/ca.html
+++ b/ca/templates/ca/ca.html
@@ -264,10 +264,10 @@
 				<!-- Info Item -->
 				<div class="col-lg-4 info_col">
 					<div class="info_item text-center">
-						<div class="info_image"><img src="{% static 'ca/img/media.png'  %}" height="120%" width="140%" alt=""></div>
+						<div class="info_image"><img src="{% static 'ca/img/media.png'  %}" height="120%" width="135%" alt=""></div>
 						<div class="info_title">Publicity</div>
 						<div class="info_text">
-							<p>Display posters of Advitiya-19 on receiving them on college bulletin and notice boards</p>
+							<p>Display posters of Advitiya-19 on receiving them on college bulletin and notice boards<br></p>
 						</div>
 					</div>
 				</div>
