incentive and card changes

--- a/ca/templates/ca/ca.html
+++ b/ca/templates/ca/ca.html
@@ -128,7 +128,7 @@
 			<div class="row">
 				<div class="col">
 					<!-- Testimonials Slider -->
-					<h1 style="color:white"><strong>WHY CA?</strong></h1>
+					<h1  style="color:white"><strong>WHY CA?</strong></h1>
 					<div class="services_slider_container">
 						<div class="owl-carousel owl-theme services_slider">
 
@@ -148,8 +148,8 @@
 								<div class="services_item d-flex flex-column align-items-center justify-content-center">
 									<div class="services_item_bg"></div>
 									<!-- <div class="services_icon"></div> -->
-									<div class="services_title"><strong> Your Network</strong></div>
-									<p class="services_text">Interact with people coming from diverse fields across the country and develop your network</p>
+									<div class="services_title"><strong>Increase Your Network</strong></div>
+									<p class="services_text">Interact with new people  and develop your network</p>
 									<!-- <div class="services_link"><a href="#">Read More</a></div> -->
 								</div>
 							</div>
@@ -159,8 +159,8 @@
 								<div class="services_item d-flex flex-column align-items-center justify-content-center">
 									<div class="services_item_bg"></div>
 									<!-- <div class="services_icon"></div> -->
-									<div class="services_title"><strong>Certificates</strong></div>
-									<p class="services_text">All CA's will be given Certificates by Advitiya IIT Ropar recogonizing them for their work</p>
+									<div class="services_title"><strong>Certificates Of Recognition </strong></div>
+									<p class="services_text">All CA's will be given Certificates by Advitiya IIT Ropar for their work</p>
 									<!-- <div class="services_link"><a href="#">Read More</a></div> -->
 								</div>
 							</div>
@@ -206,11 +206,14 @@
 	<!-- Converter -->
 
 	<div class="converter">
-		<div class="converter_background parallax-window" data-parallax="scroll" data-image-src="{% static 'ca/img/converter.png'  %}" data-speed="0.8"></div>
+		<div class="converter_background parallax-window" data-parallax="scroll" style="background-color: black;"  data-speed="0.8"></div>
 
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-5">
+					<div class="col-lg-6">
+							<img src="{% static 'ca/img/converter.png'  %}" style="height: fit-content;" alt="">
+						</div>
+				<div class="col-lg-6">
 					<div class="converter_content">
 						<div class="converter_title_container">
 							<div class="converter_subtitle">take a look at the</div>
