--- a/templates/ca/nav.html
+++ b/templates/ca/nav.html
@@ -1,11 +1,19 @@
-{% load static  %}
-<header class="site-navbar site-navbar-target" role="banner">
+{% load static %} {% load socialaccount %}
+<header class="site-navbar" role="banner">
     <div class="container">
-        <div class="col-lg-4 text-center">
-            <div class="site-logo">
-                <a href="{% url 'home' %}"><img src="{% static 'ca/img/logo.png' %}" class='nav-brand-logo' alt="" srcset=""></a>
+        <div class="row">
+            <div class="col-6 text-left">
+                <a href="{% url 'ca:home' %}"><img src="{% static 'ca/img/logo.png' %}" class='nav-brand-logo' alt="" srcset=""></a>
+            </div>
+
+            <div class="col-6 text-right">
+                {% if not user.is_authenticated %}
+                <a href="{% provider_login_url 'google' %}" class="vcenter"><img src="{% static 'ca/img/gsignin.png' %}" class='gsignin-btn' alt="" srcset=""></a>
+                {% else %}
+                <div class="signout"><a href="{% url 'account_logout' %}">SIGN OUT</a></div>
+                {% endif %}
+
             </div>
         </div>
     </div>
-
 </header>
