--- a/templates/ca/index.html
+++ b/templates/ca/index.html
@@ -15,7 +15,7 @@
 
     {% include "ca/nav.html" %}
     <div class="ftco-blocks-cover-1">
-        <div class="ftco-cover-1 main-back overlay" style="">
+        <div class="ftco-cover-1 main-back overlay">
             <div class="container">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-6 text-center">
