--- a/templates/ca/index.html
+++ b/templates/ca/index.html
@@ -1,19 +1,8 @@
- {% load static %}
-<!doctype html>
-<html lang="en">
+{% extends 'ca/base.html'%}
+{% load static %}
+{% block title %} Advitiya-2020 {%endblock%}
+{% block body %}
 
-<head>
-    <title>Advitiya-2020</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'ca/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'ca/css/style.css' %}">
-</head>
-
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-
-    {% include "ca/nav.html" %}
     <div class="ftco-blocks-cover-1">
         <div class="ftco-cover-1 main-back overlay">
             <div class="container">
@@ -30,12 +19,12 @@
         <div class="row justify-content-center text-center mb-5">
             <div class="col-md-6">
                 <span class="text-primary">Who We Are?</span>
-                <h2 class="mb-4">About Advitiya</h2>
-                <p>
+                <h2 class="mb-4"><strong>About Advitiya</strong></h2>
+                <h4>
                     IIT Ropar is organizing the fourth edition of it's annual Technical Festival “Advitiya” in the first week of of February consisting of 72 hours of intense competitions and technical events Advitiya has already evolved into a brand within four years of
                     its inception and a publicity paradise that ensures stupendous brand visibility for sponsors With an array of events that consolidate the vision for times to come, Advitiya 20’ is ready to set the scientific spirits soaring and technological
                     temper ablaze Advitiya will witness a wide range of scientific and technical activities and novel events from fields like Coding, Robotics, Finance, Design and Entrepreneurship with total prizes worth as high as 8 lakh Rupees
-                </p>
+                </h4>
 
             </div>
         </div>
@@ -56,7 +45,7 @@
                 <div class="row feature-2">
                     <div class=" feature-2-contents">
                         <div class="">
-                            <span class="caption">01.</span>
+                            <!-- <span class="caption">01.</span> -->
                             <h3 class="mb-5">Free Pro Night Passes</h3>
                             <p>Top 50 CAs will get pro-night passes for free</p>
                         </div>
@@ -67,7 +56,7 @@
                 <div class="row feature-2">
                     <div class=" feature-2-contents">
                         <div class="fixed-content">
-                            <span class="caption">02.</span>
+                            <!-- <span class="caption">02.</span> -->
                             <h3 class="mb-5">Goodies</h3>
                             <p>CAs who bring more than 50 participants will get goodies and t-shirts of Advitiya 2020 for free.</p>
                         </div>
@@ -78,8 +67,8 @@
                 <div class="row align-items-stretch feature-2">
                     <div class=" feature-2-contents">
                         <div class="fixed-content">
-                            <span class="caption">03.</span>
-                            <h3 class="mb-5">Lucrative Prices</h3>
+                            <!-- <span class="caption">03.</span> -->
+                            <h3 class="mb-5 justify-content-center">Cash Prices</h3>
                             <p>CAs will get cash prizes based on the number of participants referred by them.</p>
                         </div>
                     </div>
@@ -89,9 +78,9 @@
                 <div class="row align-items-stretch feature-2">
                     <div class=" feature-2-contents">
                         <div class="fixed-content">
-                            <span class="caption">04.</span>
-                            <h3 class="mb-5">Lucrative Prices</h3>
-                            <p>Top 10 CAs will get a certificate of excellence each, with their ranks mentioned in it, and goodies worth ₹ 15,000/- for free.</p>
+                            <!-- <span class="caption">04.</span> -->
+                            <h3 class="mb-5 justify-content-center">Lucrative Prices</h3>
+                            <p>Top 10 CAs will get a certificate of excellence and goodies worth ₹ 15,000/- for free.</p>
                         </div>
                     </div>
                 </div>
@@ -100,8 +89,8 @@
                 <div class="row align-items-stretch feature-2">
                     <div class=" feature-2-contents">
                         <div class="fixed-content">
-                            <span class="caption">05.</span>
-                            <h3 class="mb-5">Free Accomodation</h3>
+                            <!-- <span class="caption">05.</span> -->
+                            <h3 class="mb-5 justify-content-center">Free Accomodation</h3>
                             <p>Get waivers on accomodation during fest</p>
                         </div>
                     </div>
@@ -111,8 +100,8 @@
                 <div class="row align-items-stretch feature-2">
                     <div class=" feature-2-contents">
                         <div class="fixed-content">
-                            <span class="caption">05.</span>
-                            <h3 class="mb-5">certificate Of Participation</h3>
+                            <!-- <span class="caption">05.</span> -->
+                            <h3 class="mb-5">Certificates</h3>
                             <p>All CAs will get certificate of participation.</p>
                         </div>
                     </div>
@@ -130,48 +119,36 @@
                 <p>Spread awareness about Advitiya-19 via word of mouth and ensure more and more people get to know about it</p>
             </div>
         </div>
-
-        <div class="row justify-content-center">
-            <div class="col-lg-7">
-                <div class="row">
-                    <div class="col-lg-6 mr-auto pr-lg-5">
-                        <div class="feature-3">
-                            <h3>Publicity</h3>
-                            <p>Display posters of Advitiya-19 on receiving them on college bulletin and notice boards</p>
-                        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card" >
+                    <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h3 class="card-title">Publicity</h3>
+                    <p class="card-text">Display posters of Advitiya-20 on receiving them on the college bulletin and notice boards for everyone to see</p>
                     </div>
-                    <div class="col-lg-6 ml-auto pl-lg-5">
-                        <div class="feature-3">
-                            <h3>Organize Events</h3>
-                            <p>Organize workshops & events in your college or city under the guidance of Advitiya, IIT Ropar</p>
-                        </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" style="height:100%">
+                    <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h3 class="card-title">Organize Events</h3>
+                    <p class="card-text">Organize workshops & events in your college or city under the guidance of Advitiya, IIT Ropar.</p>
                     </div>
-
-
-                    <div class="col-lg-6 mr-auto pr-lg-5">
-                        <div class="feature-3">
-                            <h3>Word of Mouth</h3>
-                            <p>Spread awareness about Advitiya-19 via word of mouth and ensure more and more people get to know about it
-                            </p>
-                        </div>
+                </div>
+            </div>
+            <div class="col-sm-4">    
+                <div class="card">
+                    <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h3 class="card-title">Word of Mouth</h3>
+                    <p class="card-text">Spread awareness about Advitiya-19 via word of mouth and ensure more and more people get to know about it</p>
                     </div>
-                    <div class="col-lg-6 ml-auto pl-lg-5">
-                        <div class="feature-3">
-                            <h3>Innovation and Ideation</h3>
-                            <p>Pitch in ideas to make the fest better Make the fest your own by helping the organizers</p>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
     </div>
-    {% include "ca/footer.html" %}
-
-    <div class='hello'></div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
-    <script src="{% static 'ca/js/main.js' %}"></script>
-</body>
-
-</html>
+{% endblock %}
+    
