--- a/templates/ca/profile.html
+++ b/templates/ca/profile.html
@@ -1,21 +1,10 @@
+{% extends 'ca/base.html'%}
 {% load static %}
-<!doctype html>
-<html lang="en">
-
-<head>
-    <title>Advitiya-2020</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'ca/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'ca/css/style.css' %}">
-</head>
-
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-    {% include "ca/nav.html" %}
+{% block title %} Profile Page {%endblock%}
+{% block body %}
 
     <div class="ftco-blocks-cover-1">
-        <div class="ftco-cover-1 overlay" style="background-image: url('images/hero_2.jpg')">
+        <div class="ftco-cover-1 overlay">
             <div class="container">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-6 text-center text-white">
@@ -24,8 +13,8 @@
                         <table class="table display-data text-white align-items-center">
                             <thead>
                                 <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">#</th>
+                                    <th scope="col">FIELDS</th>
+                                    <th scope="col">DATA</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -47,20 +36,14 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <!-- <center>
+                         <center>
                             <button class="btn-primary primary update-pro"><a href="{% url 'ca:register_profile' %}"> Update</a></button>
-                        </center> -->
+                        </center> 
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    {% include "ca/footer.html" %}
-    <div class='hello'></div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
-    <script src="{% static 'ca/js/main.js' %}"></script>
-</body>
-
-</html>
+{% endblock %}
+    
