Fix ca and logout

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -20,7 +20,7 @@
             <p class="lead">Campus Ambassador portal is live now.<br>Register here.</p>
             <p class="lead">
               <h2><strong><br>CAMPUS AMBASSADOR</strong></h2><br>
-              <a href="{% url 'ca:index' %}" class="btn btn-lg btn-secondary">Register</a>
+              <a href="{% url 'ca:home' %}" class="btn btn-lg btn-secondary">Register</a>
             </p>
           </main>
         </div>
