--- a/ca/templates/ca/register.html
+++ b/ca/templates/ca/register.html
@@ -3,22 +3,27 @@
 {% load crispy_forms_tags %}
 {% block title %} Update Profile {%endblock%}
 
-        {% block body %}
-        
-        <div class="ftco-blocks-cover-1">
-                <div class="ftco-cover-1 main-back overlay">
-                    <div class="container">
-                        <div class="row align-items-center justify-items-center">
-                            <div class="col-lg-12">
-                                <form method="POST" action="">
-                                        {% csrf_token %}
-                                        {{ form | crispy }}
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+{% block body %}
+
+<div class="ftco-blocks-cover-1">
+    <div class="ftco-cover-1 main-back overlay">
+        <div class="container">
+            <div class="row align-items-center justify-items-center">
+                <div class="col-md-6 mx-auto">
+                    <Style>
+                        label{
+                            color:white;
+                        }
+                        </Style>
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        {{ form | crispy }}
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
 
-            {% endblock %}
+{% endblock %}
